# exec-radar

./: .dockerignore  .env.example  .gitignore  AGENT_HANDOFF_2026-03-10.txt  API.md  DEVELOPMENT.md  Dockerfile  QUICKSTART.md  README.md  alembic.ini  archive_project.sh  conftest.py  docker-compose.yml  pyproject.toml  sources.yaml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_job_state_tracking.py  003_add_profiles.py
apps/: __init__.py
apps/api/: __init__.py  config.py  main.py  models.py  profile_models.py  profile_routes.py  pyproject.toml  routes.py  server.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/routers/: __init__.py  health.py  jobs.py
apps/dashboard/: README.md  __init__.py  app.py  preferences_store.py
apps/dashboard/static/: app.js  style.css
apps/dashboard/templates/: base.html  compare.html  index.html  profile_detail.html  profile_form.html  profile_upload.html  profiles.html
apps/worker/: __init__.py  main.py  worker.py
docs/: architecture.md  roadmap.md
examples/: broad_exec_ops_profile.yaml  deeptech_hardware_profile.yaml  profil1.yaml  profil2.yaml  profil3.yaml  sample_profile.yaml  semiconductor_exec_profile.yaml
tests/: __init__.py  conftest.py  test_api.py  test_ashby_collector.py  test_collector.py  test_composite_collector.py  test_db.py  test_greenhouse_collector.py  test_job_state.py  test_keyword_clusters.py  test_lever_collector.py  test_normalizer.py  test_pipeline.py  test_profile_loader.py  test_profile_management.py  test_ranker.py  test_schemas.py  test_services.py  test_source_sets.py  test_target_profile.py  test_title_families.py  test_title_filter.py
tests/e2e/: __init__.py  conftest.py  test_gui.py
